--- a/style.css
+++ b/style.css
@@ -8,15 +8,21 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-#headerRegion {
+div#headerRegion {
   font-size: 13px;
   position: relative;
-  margin: 5px;
+  margin: 20px;
+  margin-top: 20px;
+  min-width: 90%;
   font-size: 10px;
   font-weight: 300;
-  color: rgba(126, 126, 126, 0.57)
+  color: rgba(126, 126, 126, 0.57);
+  height: 100px;
 }
 
+.div1 {
+  clear: both;
+}
 .div1 a {
   color: black;
   display: inline-block;
@@ -25,8 +31,12 @@ body {
 }
 
 .top {
+  clear: left;
   position: relative;
-  left: 1068px;
+  /* left: 900px; */
+  float: right;
+  min-width: 5%;
+  margin-top: -13px;
 }
 
 .top a {
@@ -43,10 +53,9 @@ body {
 
 a.imgicon {
   width: 28px;
-  height: 27px;
+  height: 30px;
   background: url(profile.jpg) no-repeat;
-  border-radius: 3.0000000415452836e24px;
-  fill: 100%;
+  border-radius: 100%;
 }
 
 .top a:nth-child(4) {
@@ -58,24 +67,23 @@ a.imgicon {
 
 #centerRegion {
   text-align: center;
+  width: 80%;
+  margin: auto;
 }
 
-div.gimg {
-  width: 272px;
-  height: 90px;
-  background: url(google.png) no-repeat;
+div.gimg img {
   position: relative;
-  top: 90px;
-  left: 510px;
+  top: 30px;
 }
 
 div.form {
   position: relative;
-  top: 120px;
+  top: 50px;
+  text-align: center;
 }
 
 input[type="text"] {
-  width: 480px;
+  width: 478px;
   border: 1px solid rgb(224, 224, 224);
   outline: none;
   border-radius: 50px;
@@ -107,7 +115,7 @@ input[type="text"]:hover {
 
 div.buttons {
   position: relative;
-  top: 145px;
+  top: 70px;
   right: 8px;
 }
 
@@ -129,8 +137,8 @@ div.buttons a {
 div#belowCenter {
   text-align: center;
   position: relative;
-  top: 170px;
-  right: 20px;
+  top: 100px;
+  /* right: 20px; */
   font-size: 13px;
 }
 
@@ -142,9 +150,9 @@ div#belowCenter a {
 
 div#footerRegion {
   position: relative;
-  top: 365px;
+  top: 260px;
   background: rgb(241, 240, 240);
-  height: 73px;
+  height: 77px;
 }
 
 div#footerRegion h2 {
@@ -171,9 +179,60 @@ div#footerRegion .span1 {
 
 div#footerRegion .span2 {
   position: relative;
-  left: 870px;
+  left: 860px;
   top: 8px;
 }
 
-
 /*  */
+
+@media (max-width: 730px) {
+  .top {
+    position: relative;
+  }
+
+  input[type="text"] {
+    width: 100%;
+    border: 1px solid rgb(224, 224, 224);
+    outline: none;
+    border-radius: 50px;
+    padding: 12px 39px;
+    background-color: transparent;
+  }
+
+  .form a:nth-child(2) {
+    position: relative;
+    right: 120px;
+    top: -33px;
+  }
+
+  .form a:nth-child(3) {
+    position: relative;
+    right: -117px;
+    top: -33px;
+  }
+
+  div#footerRegion {
+    text-align: center;
+    height: 200px;
+  }
+
+  div#footerRegion span a {
+    text-decoration: none;
+    color: #5f6368;
+    font-size: 14px;
+    padding: 3px;
+    display: block;
+  }
+
+  div#footerRegion .span1 {
+    position: relative;
+    left: 0px;
+    top: 0px;
+  }
+
+  div#footerRegion .span2 {
+    position: relative;
+    left: 0px;
+    top: 0px;
+  }
+}
