--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ a {
 
 
 
+
 /* ----- */
 
 header {
@@ -150,7 +151,7 @@ section#belowCenter {
 
 section#belowCenter a {
   margin: 0 3px;
-  color: #1a0dab;
+  color: rgb(116, 116, 255) ;
 }
 
 footer {
@@ -250,27 +251,34 @@ span.span2 {
 
 /* Smart Phones */
 @media (max-width: 768px) {
+
+  
   .topLeft {
-    display: inline-block;
+    padding: 10px 0 10px 8px;
+    clear: both;
+    float: left;
   }
-  .topLeft a{
+  .topLeft .links a h3{
     display: inline-block;
-    color: rgb(43, 43, 43);
-    font-size: 13px;
-    padding-top: 8px;
+    color: rgb(143, 143, 143);
+    font-size: 14px;
+    padding-left: 9px;
   }
   
   button.burger {
     outline: none;
     background: none;
     border: none;
+    float: left;
+    margin-top: -1px;
   }
 
-  .topLeft .burger span{
-    display: block;
-    border: 1px solid #000;
-    width: 17px;
-    margin: 2px;
+  .topLeft .burger div{
+    border: 1px solid rgb(143, 143, 143);
+    width: 21px;
+    pointer-events: none;
+    margin-bottom: 2px;
+    margin-top: 4px;
   }
 
   section#belowCenter span.Gtext {
@@ -306,7 +314,15 @@ span.span2 {
   }
 
   .seperator {
-    height: 400px;
+    height: 200px;
+  }
+
+  .active {
+    border-bottom: 2px solid rgb(141, 141, 255);
+    color: rgb(116, 116, 255) !important;
+    padding-bottom: 10px;
+    margin-left: 10px;
+    width: 47px;
   }
 
 }
@@ -425,6 +441,28 @@ span.span2 {
   div.form a:nth-child(3) {
     position: absolute;
     left: 3px;
+    top: 28px;
+  }
+}
+
+@media (min-width: 500px) and (max-width: 505px) {
+  div.form input[type="text"] {
+    width: 390px;
+    padding: 10px 30px;
+    outline: none;
+    border: 1px solid rgb(204, 204, 204);
+    border-radius: 50px;
+  }
+
+  div.form a:nth-child(2) {
+    position: absolute;
+    left: 42px;
+    top: 25px;
+  }
+
+  div.form a:nth-child(3) {
+    position: absolute;
+    left: 400px;
     top: 28px;
   }
 }
