--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 /* Global */
@@ -31,6 +32,7 @@ li {
 
 i {
   font-size: 10px;
+  pointer-events: none;
 }
 
 /* ----- */
@@ -151,7 +153,7 @@ section#belowCenter {
 
 section#belowCenter a {
   margin: 0 3px;
-  color: rgb(116, 116, 255);
+  color: #4285F4;
 }
 
 footer {
@@ -194,13 +196,39 @@ span.span2 {
   top: 0;
   left: 0;
   z-index: 1;
-  animation-name: nav-slide;
-  animation-duration: 1s;
   display: none;
   box-shadow: 0 10px 10px 400px rgba(163, 163, 163, 0.54);
 }
 
+.animationSlide {
+  animation: nav-slide 1s;
+}
+
+/* .animationRemove {
+  animation: nav-reverse 1s;
+} */
+
 @keyframes nav-slide {
+  from {
+    transform: translateX(-74%)
+  }
+
+  to {
+    transform: translateX(0%);
+  }
+}
+
+/* @keyframes nav-reverse {
+  from {
+    transform: translateX(0%);
+  }
+
+  to {
+    transform: translateX(-74%);
+  }
+} */
+
+/* @keyframes nav-slide {
   0% {
     width: 47%;
   }
@@ -208,7 +236,7 @@ span.span2 {
   100% {
     width: 74%;
   }
-}
+} */
 
 #menuG {
   margin-top: 10px;
@@ -227,6 +255,7 @@ span.span2 {
 #menu ul li a {
   color: rgba(0, 0, 0, 0.54);
 }
+
 /* ----------------------------------- */
 
 @media (min-width: 770px) {
@@ -300,6 +329,7 @@ span.span2 {
     clear: both;
     float: left;
   }
+
   .topLeft .links a h3 {
     display: inline-block;
     color: rgb(143, 143, 143);
@@ -362,8 +392,8 @@ span.span2 {
   }
 
   .active {
-    border-bottom: 2px solid rgb(141, 141, 255);
-    color: rgb(116, 116, 255) !important;
+    border-bottom: 2px solid #4285F4;
+    color: #4285F4 !important;
     padding-bottom: 10px;
     margin-left: 10px;
     width: 47px;
@@ -375,7 +405,7 @@ span.span2 {
     width: 330px;
     padding: 10px 30px;
     outline: none;
-    border: 1px solid rgb(204, 204, 204);
+    border: 1px solid #cccccc;
     border-radius: 50px;
   }
 
@@ -419,7 +449,7 @@ span.span2 {
     width: 330px;
     padding: 10px 30px;
     outline: none;
-    border: 1px solid rgb(204, 204, 204);
+    border: 1px solid #cccccc;
     border-radius: 50px;
   }
 
@@ -441,7 +471,7 @@ span.span2 {
     width: 330px;
     padding: 10px 30px;
     outline: none;
-    border: 1px solid rgb(204, 204, 204);
+    border: 1px solid #cccccc;
     border-radius: 50px;
   }
 
@@ -463,7 +493,7 @@ span.span2 {
     width: 330px;
     padding: 10px 30px;
     outline: none;
-    border: 1px solid rgb(204, 204, 204);
+    border: 1px solid #cccccc;
     border-radius: 50px;
   }
 
@@ -493,7 +523,7 @@ span.span2 {
     width: 390px;
     padding: 10px 30px;
     outline: none;
-    border: 1px solid rgb(204, 204, 204);
+    border: 1px solid #cccccc;
     border-radius: 50px;
   }
 
