--- a/css/style.css
+++ b/css/style.css
@@ -241,18 +241,30 @@ span.span2 {
   margin-left: 10px;
 }
 
-#borderLine {
-  border: 0.01111px solid rgba(163, 163, 163, 0.54);
+hr {
+  background-color: rgba(163, 163, 163, 0.54);
+  margin: 20px 0; 
+  border: none;
+  height: 1px;
 }
 
+
 #menu ul li {
-  margin: 30px 0;
-  padding-left: 20px;
+  margin: 32px 0 0 15px;
 }
+
 
 #menu ul li a {
   color: rgba(0, 0, 0, 0.54);
+  display: flex;
+  flex-direction: row;
 }
+
+#menu ul li a img {
+  margin-top: -3px;
+  margin-right: 4px;
+}
+
 
 /* ----------------------------------- */
 
